# vendorops-ai

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AI_POWERED_DATA_PIPELINE_IMPLEMENTATION_PLAN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 202604270001_initial_schema.py
app/: __init__.py
app/analytics/: __init__.py  dashboard.py
app/api/: dependencies.py  main.py  schemas.py  serializers.py  state.py
app/auth/: __init__.py  security.py  service.py
app/config/: __init__.py  settings.py
app/db/: models.py  repositories.py  session.py
app/extraction/: __init__.py  extractor.py  prompts.py  schemas.py
app/ingestion/: __init__.py  storage.py
app/observability/: __init__.py  logging.py  middleware.py  retry.py
deploy/: README.md
docs/: PRODUCTION_SAAS_ARCHITECTURE.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  (+2 more)
scripts/: run_all.ps1  run_api.ps1  run_frontend.ps1  run_migrations.ps1  run_tests.ps1
tests/: __init__.py  conftest.py  helpers.py  test_analytics_dashboard.py  test_auth_tenancy.py  test_database_migrations.py  test_phase0_setup.py  test_phase10_integration.py  test_phase10_retry.py  test_phase1_api.py  test_phase2_database.py  test_phase3_parsers.py  test_phase4_extraction.py  test_phase5_validation.py  test_phase6_pipeline.py  test_phase7_reports.py  test_phase8_observability.py  test_phase9_deployment.py  test_storage_security.py
(+28 files in other folders)
